<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProgrammerActivity">

    <TextView
        android:id="@+id/EMF"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/EMF_message"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/magX"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Mag_X"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EMF"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/magY"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Mag_Y"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magX"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gyroX"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Gyro_X"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gyro"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/accZ"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Acc_Z"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accY"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/magField"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Mag_Field"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magZ"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/magFieldPower"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Mag_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magField"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/Acc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magFieldPower"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gyroZ"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Gyro_Z"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gyroY"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/accY"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Acc_Y"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accX"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/accX"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Acc_X"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/accPower"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Acc_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accZ"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gyro"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/Gyro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accPower"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gyroY"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Gyro_Y"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gyroX"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/magZ"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Mag_Z"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magY"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gyroPower"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Gyro_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gyroZ"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/Location"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gyroPower"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Latitude"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Longitude"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Latitude"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/others"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/Others"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Longitude"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/light"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/others"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lightPower"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Light_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light" />

    <TextView
        android:id="@+id/altitude"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Altitude"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightPower" />

    <TextView
        android:id="@+id/altitudePower"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/Altitude_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altitude" />


</androidx.constraintlayout.widget.ConstraintLayout>